# BytePulse

./: .gitignore  README.md  app.py  launch_bytepulse.bat  main.py  open-dashboard.sh  pyproject.toml  requirements-api.txt  requirements.txt  run_hidden.example.vbs  setup_tasks.ps1  start_tracker.example.bat
api/: database.py  main.py  routes.py
assets/: ARCHITECTURE.md
linux/: README.md  app.py  launch_bytepulse.sh  main.py  pyproject.toml  requirements.txt  run-tracker.sh  run_tracker.sh  setup_systemd.sh
linux/src/: alerts.py  config.py  daemon.py  tracker.py  tray.py
linux/systemd/: bytepulse.service  bytepulse.timer
scripts/: migrate_csv_to_db.py
setup/: INSTALL_GUIDE.md  README.md  README_FINAL.md  setup_bytepulse.bat  setup_bytepulse.py
shared/core/: analyzer.py  anomaly.py  forecaster.py  summarize.py
shared/database/: database.py  schema.sql
src/: alerts.py  forecaster.py  summarize.py  tracker.py  tray.py
windows/: README.md  app.py  launch_bytepulse.bat  main.py  pyproject.toml  register_tasks.ps1  requirements.txt  start_tracker.example.bat
windows/setup/: README.md  setup_bytepulse.bat  setup_bytepulse.py
windows/src/: alerts.py  tracker.py  tray.py
